@@ -15,6 +15,7 @@
 * Nathan Saper
 * Albert Menkveld
 * Ian Taylor
+* Thomas Svensen
 
 I want to say a big <b>THANK YOU</b> for all people which supported this project in this way.
 </pre>
